[package]
name = "mpileup"
description = "Pile up multiple bam files site by site"
version = "0.0.2"
edition = "2018"
authors = ["Ye Chang <yech1990@gmail.com>"]
license = "MIT"

[dependencies]
clap = "3.0.0-beta.4"
rust-htslib = "0.36.0"
bio-types = "0.11.0"
csv = "1.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.1"
