[package]
name = "mpileup"
description = "Pile up multiple bam files site by site"
version = "0.0.8"
edition = "2021"
authors = ["Ye Chang <yech1990@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "3.1.6", default-features = false, features = ["std", "derive", "color"] }
rust-htslib = "0.38.2"
bio-types = "0.11.0"
csv = "1.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.1"
