[package]
name = "mpileup"
description = "Pile up multiple bam files site by site"
version = "0.0.24"
edition = "2021"
authors = ["Ye Chang <yech1990@gmail.com>"]
license = "LGPL-3.0+"
documentation = "https://docs.rs/crate/mpileup/latest"

[dependencies]
clap = { version = "3.1.6", default-features = false, features = ["std", "derive", "color"] }
rust-htslib = "0.38.2"
csv = "1.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.1"
rayon = "1.5.3"
indicatif = {version = "0.17.0", features = ["rayon"]}
